kubernetes/apps/jellyseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: jellyseerr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts: [jellyseerr.lab.skyhaven.ltd]
      secretName: jellyseerr-tls
  rules:
    - host: jellyseerr.lab.skyhaven.ltd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
